force-app/main/default/objects/Club_Product_Change__c/Club_Product_Change__c.object-meta.xml
<CustomObject>
    <label>Club Product Change</label>
    <nameField>
        <label>Club Product Change Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Club Product Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>