force-app/main/default/objects/Club_Product_Change__c/fields/Admins_Only__c.field-meta.xml
<CustomField>
    <fullName>Admins_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admins Only</label>
    <type>Checkbox</type>
</CustomField>