force-app/main/default/objects/Club_Product_Change__c/fields/Allow_Auto_Switch__c.field-meta.xml
<CustomField>
    <fullName>Allow_Auto_Switch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Auto-Switch</label>
    <type>Checkbox</type>
</CustomField>