force-app/main/default/objects/Club_Product_Change__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <referenceTo>Club_Product__c</referenceTo>
    <relationshipLabel>Club Product Changes</relationshipLabel>
    <relationshipName>Club_Product_Changes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>