force-app/main/default/objects/Club_Product_Change__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To</label>
    <referenceTo>Club_Product__c</referenceTo>
    <relationshipLabel>Club Product Changes (To)</relationshipLabel>
    <relationshipName>Club_Product_Changes1</relationshipName>
    <type>Lookup</type>
</CustomField>